@@ -1,79 +1,0 @@
-# Begin /etc/syslog-ng/syslog-ng.conf
-
-#
-# Syslog-ng configuration for Linux from Scratch
-#
-
-options { 	sync (0);
-		time_reopen (10);
-		log_fifo_size (1000);
-		long_hostnames(off); 
-		use_dns (no);
-		use_fqdn (no);
-		create_dirs (no);
-		keep_hostname (yes);
-	};
-
-source src {	unix-stream("/dev/log");
-		internal();
-		pipe("/proc/kmsg");
-	    };
-
-destination authlog { file("/var/log/authorize.log"); };
-destination syslog { file("/var/log/syslog.log"); };
-destination bootlog { file("/var/log/bootlog.log"); };
-destination cron { file("/var/log/cron.log"); };
-destination daemon { file("/var/log/daemon.log"); };
-destination kernel { file("/var/log/kernel.log"); };
-destination lpr { file("/var/log/lpr.log"); };
-destination user { file("/var/log/user.log"); };
-destination uucp { file("/var/log/uucp.log"); };
-destination mail { file("/var/log/mail.log"); };
-destination news { file("/var/log/news.log"); };
-destination debug { file("/var/log/debug.log"); };
-destination messages { file("/var/log/messages.log"); };
-destination everything { file("/var/log/everything.log"); };
-destination console { usertty("root"); };
-destination console_all { file("/dev/tty12"); };
-
-filter f_auth { facility(auth); };
-filter f_authpriv { facility(auth, authpriv); };
-filter f_syslog { not facility(authpriv, mail); };
-filter f_bootlog { facility(local0); };
-filter f_cron { facility(cron); };
-filter f_daemon { facility(daemon); };
-filter f_kernel { facility(kern); };
-filter f_lpr { facility(lpr); };
-filter f_mail { facility(mail); };
-filter f_news { facility(news); };
-filter f_user { facility(user); };
-filter f_uucp { facility(cron); };
-filter f_news { facility(news); };
-filter f_debug { not facility(auth, authpriv, news, mail); };
-filter f_messages { level(info..warn) and not facility(auth, authpriv, mail, news); };
-filter f_everything { level(debug..emerg) and not facility(auth, authpriv); };
-filter f_emergency { level(emerg); };
-filter f_info { level(info); };
-filter f_notice { level(notice); };
-filter f_warn { level(warn); };
-filter f_crit { level(crit); };
-filter f_err { level(err); };
-
-log { source(src); filter(f_authpriv); destination(authlog); };
-log { source(src); filter(f_syslog); destination(syslog); };
-log { source(src); filter(f_bootlog); destination(bootlog); };
-log { source(src); filter(f_cron); destination(cron); };
-log { source(src); filter(f_daemon); destination(daemon); };
-log { source(src); filter(f_kernel); destination(kernel); };
-log { source(src); filter(f_lpr); destination(lpr); };
-log { source(src); filter(f_mail); destination(mail); };
-log { source(src); filter(f_news); destination(news); };
-log { source(src); filter(f_user); destination(user); };
-log { source(src); filter(f_uucp); destination(uucp); };
-log { source(src); filter(f_debug); destination(debug); };
-log { source(src); filter(f_messages); destination(messages); };
-log { source(src); filter(f_emergency); destination(console); };
-log { source(src); filter(f_everything); destination(everything); };
-log { source(src); destination(console_all); };
-
-# END /etc/syslog-ng/syslog-ng.conf
