@@ -1,52 +1,0 @@
-#!/bin/sh
-# Begin $rc_base/init.d/sysklogd - Syslogd and Klogd loaders
-
-# Based on sysklogd script from LFS-3.1 and earlier.
-# Rewritten by Gerard Beekmans  - gerard@linuxfromscratch.org
-
-. /etc/sysconfig/rc
-. ${rc_functions}
-
-# Include the boot-time configuration options.
-[ -f /etc/sysconfig/sysklogd ] && . /etc/sysconfig/sysklogd
-
-case "${1}" in
-	start)
-		boot_mesg "Starting system log daemon..."
-		loadproc syslogd ${SYSLOGD_OPTIONS}
-
-		boot_mesg "Starting kernel log daemon..."
-		loadproc klogd ${KLOGD_OPTIONS}
-		;;
-
-	stop)
-		boot_mesg "Stopping kernel log daemon..."
-		killproc klogd
-
-		boot_mesg "Stopping system log daemon..."
-		killproc syslogd
-		;;
-
-	reload)
-		boot_mesg "Reloading system log daemon config file..."
-		reloadproc syslogd 1
-		;;
-
-	restart)
-		${0} stop
-		sleep 1
-		${0} start
-		;;
-
-	status)
-		statusproc syslogd
-		statusproc klogd
-		;;
-
-	*)
-		echo "Usage: ${0} {start|stop|reload|restart|status}"
-		exit 1
-		;;
-esac
-
-# End $rc_base/init.d/sysklogd
