@@ -3,6 +3,8 @@ n/a - November 25, 2004
 	* Added syslog-ng.conf to contrib/sysconfig (DJ Lucas)
 	* Rewrite of line wraping in boot_mesg and various fixes
 	  related to boot_mesg changes (DJ Lucas, Alexander Patrakov)
+	* syslog-ng is now installed by default (Jeremy Utley)
+	* removed syslog-ng.conf, as will be added to book (Nathan Coulson)
 
 n/a - November 20, 2004
 	* Modifed modules script to return to previous kernel message
